change collore theam

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,5 @@
 $white: #ffffff;
-$primary1: #f7c621;
+$primary1: #004080;
 $black: #000000;
 $btnColor: #0b0b0a;
 
@@ -464,7 +464,7 @@ a:focus {
       }
 
       .detail-box {
-        background-color: #f7c621;
+        background-color: #004080;
         padding: 15px;
 
         h6 {
