--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ a:focus {
   min-width: 116px;
   border: none;
   outline: none;
-  background-color: #f7c621;
+  background-color: #004080;
   color: #ffffff;
 }
 
@@ -478,7 +478,7 @@ a:focus {
 }
 
 .news_section .news_container .box .detail-box {
-  background-color: #f7c621;
+  background-color: #004080;
   padding: 15px;
 }
 
@@ -522,7 +522,7 @@ a:focus {
 
 .client_section .owl-carousel .owl-nav .owl-prev:hover,
 .client_section .owl-carousel .owl-nav .owl-next:hover {
-  background-color: #f7c621;
+  background-color: #004080;
 }
 
 .client_section .owl-carousel .owl-nav .owl-prev {
@@ -580,7 +580,7 @@ a:focus {
   left: 0;
   width: 100%;
   height: 90px;
-  background-color: #f7c621;
+  background-color: #004080;
   z-index: 1;
 }
 
@@ -608,7 +608,7 @@ a:focus {
 
 .client_section .owl-carousel .owl-nav .owl-prev:hover,
 .client_section .owl-carousel .owl-nav .owl-next:hover {
-  background-color: #f7c621;
+  background-color: #004080;
 }
 
 .client_section .owl-carousel .owl-nav .owl-prev {
@@ -664,7 +664,7 @@ a:focus {
   padding: 8px 30px;
   border: none;
   outline: none;
-  background-color: #f7c621;
+  background-color: #004080;
   color: #000000;
   font-size: 15px;
   text-transform: uppercase;
@@ -676,7 +676,7 @@ a:focus {
 }
 
 .app_section {
-  background-color: #f7c621;
+  background-color: #004080;
   color: #ffffff;
 }
 
@@ -783,7 +783,7 @@ a:focus {
 }
 
 .why_section .box:hover .img-box {
-  background-color: #f7c621;
+  background-color: #004080;
 }
 
 .why_section .box:hover .img-box .img-1 {
@@ -858,7 +858,7 @@ a:focus {
 .info_section .info_form form button {
   border: none;
   outline: none;
-  background-color: #f7c621;
+  background-color: #004080;
   width: 55px;
   font-size: 15px;
   text-transform: uppercase;
@@ -924,7 +924,7 @@ a:focus {
 /* end info section */
 /* footer section*/
 .footer_section {
-  background-color: #f7c621;
+  background-color: #004080;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
