Fotter chagnes rights added

--- a/css/style.css
+++ b/css/style.css
@@ -935,7 +935,7 @@ a:focus {
 }
 
 .footer_section p {
-  color: #000000;
+  color: #ffffff;
   margin: 0 auto;
   text-align: center;
   padding: 20px 0;
