--- a/css/style.scss
+++ b/css/style.scss
@@ -907,7 +907,7 @@ a:focus {
 }
 
 .footer_section p {
-  color: $black;
+  color: $white;
   margin: 0 auto;
   text-align: center;
   padding: 20px 0;
