hide unwanted crols

--- a/css/style.css
+++ b/css/style.css
@@ -665,7 +665,7 @@ a:focus {
   border: none;
   outline: none;
   background-color: #004080;
-  color: #000000;
+  color: #ffffff;
   font-size: 15px;
   text-transform: uppercase;
   font-weight: bold;
